--- a/react-crud-exercise/package.json
+++ b/react-crud-exercise/package.json
@@ -21,6 +21,7 @@
     "@eslint/js": "^9.22.0",
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
+    "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.1.4",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
