--- a/react-crud-exercise/package.json
+++ b/react-crud-exercise/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
     "@types/react-router-dom": "^5.3.3",
+    "firebase": "^11.6.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.4",
     "react": "^19.0.0",
