--- a/react-crud-exercise/package.json
+++ b/react-crud-exercise/package.json
@@ -17,7 +17,7 @@
     "primereact": "^10.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.5.1",
+    "react-router": ">=7.5.2",
     "react-router-dom": "^7.5.1"
   },
   "devDependencies": {
